<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="left"
    tools:context=".EditPreferences"
    android:background="@color/background_color"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:clickable="true"
            android:onClick="closeActivity"
            android:gravity="left">
        </ImageView>
    </LinearLayout>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:text="Edit Preferences"
        android:textColor="@color/white_greyish"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="10dp"
        android:text="Preferences"
        android:textColor="@color/white_greyish"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingBottom="50dp"/>
    <View
        android:layout_width="fill_parent"
        android:paddingTop="10dp"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="65dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/armani"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/armani"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <CheckBox
                android:id="@+id/prada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/prada"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <CheckBox
                android:id="@+id/rayban"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/rayban"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <CheckBox
                android:id="@+id/dg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/dg"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/police"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/police"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <CheckBox
                android:id="@+id/nike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/nike"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <CheckBox
                android:id="@+id/tom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/tom"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:paddingTop="10dp"
        android:layout_height="1px"
        android:background="@color/white_greyish" />


    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <Button
        android:id="@+id/updatepref"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/loginbutton_selector"
        android:padding="3dp"
        android:text="UPDATE"
        android:textColor="@color/background_color"
        android:textSize="17sp"
        android:textStyle="bold" />
</LinearLayout>